.select, .select_one 내용 수정

--- a/web_scrapy/02_BeautifulSoup_web_crawling_간단정리.ipynb
+++ b/web_scrapy/02_BeautifulSoup_web_crawling_간단정리.ipynb
@@ -268,17 +268,24 @@
    "metadata": {},
    "source": [
     "```\n",
-    "select(), select_one()설명\n",
+    "*********************************************************************\n",
+    "* select(): list로 모든 해당항목 찾음, \n",
+    "* select_one() : 가장 먼저 오는 한 개의 element만 찾음, list아님.\n",
+    "\n",
     "태그이름 : 태그이름으로 찾음\n",
     ".클래스이름' : 클래스이름(class='class_name\" ==> .class_name으로 찾음\n",
     "#아이디이름' : 아이디이름(id='id_name' ==> #id_name)으로 찾음 (아이디는 연속X)\n",
+    "\n",
     "상위태그이름>자식태그>자식태그' : 부모 자식간의 태그 조회' >' 로 구분\n",
     "   soup.select(\"div.section_cell > div > h3 > strong\")\n",
+    "   \n",
     "상위태그이름 자손태그' : 부모 자손간의 태그 조회 #띄어쓰기(공백) 로 구분 #자식을 건너 띈다.\n",
     "   soup.select(\"div.section_cell strong\")\n",
+    "   \n",
     "[속성]' : 태그 안의 속성을 찾음\n",
     "   soup.select(\"#id_name div.list_type a\")[0]['href']\n",
     "   soup.select(\"#id_name img\")[0]['src']\n",
+    "   \n",
     "태그이름.클래스이름' : 해당태그의 클래스이름을 찾음\n",
     "#id_name > 태그이름.클래스이름 : 아이이디 이름으로 찾고 자식태그와 클래스이름으로 찾음\n",
     "   soup.select(\"#id_name div.tit_area strong\")\n",
@@ -288,6 +295,8 @@
     "find, find_all()\n",
     "   soup.find_all(\"a\", class_='link_news') # == soup.select('a.link_news')[0]\n",
     "   soup.find(\"a\", id='link_news') # == soup.select_one('#link_news')\n",
+    "\n",
+    "*******************************************************************************\n",
     "\n",
     "```"
    ]
