--- a/web_scrapy/selenium_beautifulsoup_read_html.ipynb
+++ b/web_scrapy/selenium_beautifulsoup_read_html.ipynb
@@ -112,6 +112,7 @@
    ],
    "source": [
     "df = pd.read_html(driver.page_source)[0]\n",
+    "df = pd.read_html(io.StringIO(str(driver.page_source)))[0]\n",
     "df.head()"
    ]
   },
