--- a/web_scrapy/selenium_beautifulsoup_read_html.ipynb
+++ b/web_scrapy/selenium_beautifulsoup_read_html.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
     "import time\n",
     "from selenium import webdriver\n",
     "import pandas as pd"
@@ -111,7 +112,7 @@
     }
    ],
    "source": [
-    "df = pd.read_html(driver.page_source)[0]\n",
+    "# df = pd.read_html(driver.page_source)[0] # 아래 형식으로 변환됨. \n",
     "df = pd.read_html(io.StringIO(str(driver.page_source)))[0]\n",
     "df.head()"
    ]
