--- a/web_scrapy/selenium_beautifulsoup_read_html.ipynb
+++ b/web_scrapy/selenium_beautifulsoup_read_html.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "# df = pd.read_html(driver.page_source)[0] # 아래 형식으로 변환됨. \n",
+    "# df = pd.read_html(driver.page_source)[0] # 아래 형식으로 사용 형식이 바뀌었음. \n",
     "df = pd.read_html(io.StringIO(str(driver.page_source)))[0]\n",
     "df.head()"
    ]
@@ -284,7 +284,8 @@
     }
    ],
    "source": [
-    "df = df.append(pd.read_html(driver.page_source)[1])\n",
+    "# df = df.append(pd.read_html(driver.page_source)[1]) # 아래 형식으로 사용 형식이 바뀌었음. \n",
+    "df = df.append(pd.read_html(io.StringIO(str(driver.page_source)))[1])\n",
     "df.head()"
    ]
   },
